Bug 176677 - Cannot unselect mails with shift+arrows
Summary: Cannot unselect mails with shift+arrows
Status: RESOLVED FIXED
Alias: None
Product: kmail
Classification: Unmaintained
Component: new message list (other bugs)
Version First Reported In: 1.10.90
Platform: Compiled Sources Unspecified
: NOR normal
Target Milestone: ---
Assignee: Szymon Stefanek
URL:
Keywords: triaged
: 176678 (view as bug list)
Depends on:
Blocks:
 
Reported: 2008-12-02 08:08 UTC by András Manţia
Modified: 2009-02-20 00:07 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description András Manţia 2008-12-02 08:08:32 UTC
Version:            (using Devel)
Installed from:    Compiled sources

It isn't possible to unselect mails using the keyboard (shift and up/down arrows), you can just select them. I use rev. 890848.
Comment 1 András Manţia 2008-12-02 09:45:02 UTC
*** Bug 176678 has been marked as a duplicate of this bug. ***
Comment 2 George Kiagiadakis 2008-12-02 13:04:32 UTC
I can't reproduce this with rev 890719 (or I don't understand it). I select a few messages using shift+up, and then shift+down unselects them just fine.
Comment 3 András Manţia 2008-12-02 14:09:38 UTC
Sorry, it is about shift+left/right arrow, not up/down.
Comment 4 George Kiagiadakis 2008-12-02 14:21:00 UTC
Confirmed
Comment 5 Szymon Stefanek 2008-12-06 04:34:33 UTC
SVN commit 893146 by stefanek:

Properly select messages via Shift+Left/Right

BUG: 176677




 M  +6 -6      kmmainwidget.cpp  
 M  +10 -0     messagelistview/core/enums.h  
 M  +126 -12   messagelistview/core/view.cpp  
 M  +35 -5     messagelistview/core/view.h  
 M  +14 -4     messagelistview/pane.cpp  
 M  +19 -5     messagelistview/pane.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=893146
Comment 6 Oden Eriksson 2009-02-20 00:07:27 UTC
this is valid for mandriva cooker as well. (kmail 1.11.0)