Properly select messages via Shift+Left/Right

BUG: 176677



svn path=/trunk/KDE/kdepim/; revision=893146